fix footer alignment on error page.

--- a/src/ocd/static/css/error.css
+++ b/src/ocd/static/css/error.css
@@ -1,7 +1,3 @@
-body{
-	direction:rtl;
-}
-
 #t1{
 	font-size:7em;
 }
